# transcribe-translate-analyze-streamlit

./: .gitignore  README.md  pyproject.toml
notebooks/: research.ipynb
src/: dto.py  main.py  rekognition.py  streamlit_app.py  utils.py
src/faces/: faces.py  person_match.py  utils.py
src/subtitles/: subtitles.py
src/transcribe/: amazon.py
src/translate/: translate.py
