[tool.poetry]
name = "tta"
version = "0.1.0"
description = "Trascribe, translate and analyze"
authors = ["Rinat Akhmetov <rakhmetov@provectus.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.23.8"
boto = "^2.49.0"
tqdm = "^4.64.0"
joblib = "^1.1.0"
fire = "^0.4.0"
numpy = "^1.22.4"
opencv-python = "^4.5.5"
requests = "^2.27.1"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
